[gd_scene load_steps=13 format=3 uid="uid://bl3mh6t2oflim"]

[ext_resource type="Script" path="res://1Lvl/wolf/wolf.gd" id="1_762nn"]
[ext_resource type="Texture2D" uid="uid://cqjqk4in8tb4g" path="res://1Lvl/wolf/wolf4.png" id="2_tvixj"]
[ext_resource type="Texture2D" uid="uid://c8y5lcino0jpy" path="res://1Lvl/wolf/wolf5.png" id="3_02j17"]
[ext_resource type="Texture2D" uid="uid://bw6qp4d6ti7jn" path="res://1Lvl/wolf/wolf6.png" id="4_qsdpb"]
[ext_resource type="Texture2D" uid="uid://bl3sg7wmboobq" path="res://1Lvl/wolf/wolf2.png" id="5_ccvn4"]
[ext_resource type="Texture2D" uid="uid://b0pqr30rk1qed" path="res://1Lvl/wolf/wolf1.png" id="6_hu7pi"]
[ext_resource type="Texture2D" uid="uid://cqmumx8k5igcg" path="res://1Lvl/wolf/wolf3.png" id="7_uc0aa"]
[ext_resource type="Texture2D" uid="uid://b7ustyyisklwg" path="res://1Lvl/wolf/wolf.png" id="8_2f4ta"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7pyyv"]
radius = 644.842

[sub_resource type="SpriteFrames" id="SpriteFrames_kjfce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tvixj")
}, {
"duration": 1.0,
"texture": ExtResource("3_02j17")
}, {
"duration": 1.0,
"texture": ExtResource("4_qsdpb")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ccvn4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_hu7pi")
}, {
"duration": 1.0,
"texture": ExtResource("5_ccvn4")
}, {
"duration": 1.0,
"texture": ExtResource("7_uc0aa")
}, {
"duration": 1.0,
"texture": ExtResource("8_2f4ta")
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aasqi"]
size = Vector2(109, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yk1h2"]
size = Vector2(128, 61)

[node name="wolf" type="CharacterBody2D"]
script = ExtResource("1_762nn")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(-0.5, 71)
shape = SubResource("CircleShape2D_7pyyv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(26.7441, 74.5391)
scale = Vector2(0.89162, 0.741241)
sprite_frames = SubResource("SpriteFrames_kjfce")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(26.5, 66)
shape = SubResource("RectangleShape2D_aasqi")

[node name="attackZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackZone"]
position = Vector2(26, 62.5)
shape = SubResource("RectangleShape2D_yk1h2")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="attackZone" to="." method="_on_attack_zone_body_entered"]
[connection signal="body_exited" from="attackZone" to="." method="_on_attack_zone_body_exited"]
